RenDisco/Antlr4/RenDisco/RenpyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./RenDisco/Renpy.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class RenpyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, IDENT=35, STRING=36, NUMBER=37, NL=38, WS=39, 
		LINE_COMMENT=40, INDENT=41, DEDENT=42, WITH=43, FADEIN=44, FADEOUT=45, 
		JUMP=46, CALL=47, RETURN=48, MENU=49, DEFAULT=50, TRUE=51, FALSE=52;
	public const int
		RULE_block = 0, RULE_statement = 1, RULE_label_def = 2, RULE_character_def = 3, 
		RULE_scene_def = 4, RULE_pause_def = 5, RULE_play_music_def = 6, RULE_stop_music_def = 7, 
		RULE_jump_def = 8, RULE_call_def = 9, RULE_menu_def = 10, RULE_menu_option = 11, 
		RULE_default_def = 12, RULE_return_def = 13, RULE_dialogue = 14, RULE_narration = 15, 
		RULE_character_ref = 16, RULE_aguments = 17, RULE_argument = 18, RULE_conditional_block = 19, 
		RULE_elif_block = 20, RULE_else_block = 21, RULE_assignment = 22, RULE_expression = 23;
	public static readonly string[] ruleNames = {
		"block", "statement", "label_def", "character_def", "scene_def", "pause_def", 
		"play_music_def", "stop_music_def", "jump_def", "call_def", "menu_def", 
		"menu_option", "default_def", "return_def", "dialogue", "narration", "character_ref", 
		"aguments", "argument", "conditional_block", "elif_block", "else_block", 
		"assignment", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "'label'", "':'", "'define'", "'='", "'Character'", "'('", "','", 
		"'color'", "')'", "'scene'", "'bg'", "'with'", "'dissolve'", "'fade'", 
		"'pause'", "'play music'", "'fadein'", "'stop music'", "'fadeout'", "'jump'", 
		"'call'", "'menu'", "'default'", "'return'", "'if'", "'elif'", "'else'", 
		"'$'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "IDENT", 
		"STRING", "NUMBER", "NL", "WS", "LINE_COMMENT", "INDENT", "DEDENT", "WITH", 
		"FADEIN", "FADEOUT", "JUMP", "CALL", "RETURN", "MENU", "DEFAULT", "TRUE", 
		"FALSE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Renpy.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static RenpyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RenpyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RenpyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(RenpyParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(RenpyParser.NL, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 0, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			statement();
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 378291979274L) != 0)) {
				{
				{
				State = 52;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NL) {
					{
					{
					State = 49;
					Match(NL);
					}
					}
					State = 54;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 55;
				statement();
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Label_defContext label_def() {
			return GetRuleContext<Label_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Character_defContext character_def() {
			return GetRuleContext<Character_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Scene_defContext scene_def() {
			return GetRuleContext<Scene_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Pause_defContext pause_def() {
			return GetRuleContext<Pause_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Play_music_defContext play_music_def() {
			return GetRuleContext<Play_music_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stop_music_defContext stop_music_def() {
			return GetRuleContext<Stop_music_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Jump_defContext jump_def() {
			return GetRuleContext<Jump_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Call_defContext call_def() {
			return GetRuleContext<Call_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Menu_defContext menu_def() {
			return GetRuleContext<Menu_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Default_defContext default_def() {
			return GetRuleContext<Default_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Return_defContext return_def() {
			return GetRuleContext<Return_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DialogueContext dialogue() {
			return GetRuleContext<DialogueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NarrationContext narration() {
			return GetRuleContext<NarrationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Conditional_blockContext conditional_block() {
			return GetRuleContext<Conditional_blockContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61;
				label_def();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62;
				character_def();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63;
				scene_def();
				}
				break;
			case T__14:
				EnterOuterAlt(_localctx, 4);
				{
				State = 64;
				pause_def();
				}
				break;
			case T__15:
				EnterOuterAlt(_localctx, 5);
				{
				State = 65;
				play_music_def();
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 6);
				{
				State = 66;
				stop_music_def();
				}
				break;
			case T__19:
				EnterOuterAlt(_localctx, 7);
				{
				State = 67;
				jump_def();
				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 8);
				{
				State = 68;
				call_def();
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 9);
				{
				State = 69;
				menu_def();
				}
				break;
			case T__22:
				EnterOuterAlt(_localctx, 10);
				{
				State = 70;
				default_def();
				}
				break;
			case T__23:
				EnterOuterAlt(_localctx, 11);
				{
				State = 71;
				return_def();
				}
				break;
			case T__27:
				EnterOuterAlt(_localctx, 12);
				{
				State = 72;
				assignment();
				}
				break;
			case IDENT:
				EnterOuterAlt(_localctx, 13);
				{
				State = 73;
				dialogue();
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 14);
				{
				State = 74;
				narration();
				}
				break;
			case T__24:
				EnterOuterAlt(_localctx, 15);
				{
				State = 75;
				conditional_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Label_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RenpyParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AgumentsContext aguments() {
			return GetRuleContext<AgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDENT() { return GetToken(RenpyParser.INDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEDENT() { return GetToken(RenpyParser.DEDENT, 0); }
		public Label_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterLabel_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitLabel_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Label_defContext label_def() {
		Label_defContext _localctx = new Label_defContext(Context, State);
		EnterRule(_localctx, 4, RULE_label_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(T__0);
			State = 79;
			Match(IDENT);
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 80;
				aguments();
				}
			}

			State = 83;
			Match(T__1);
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INDENT) {
				{
				State = 84;
				Match(INDENT);
				State = 85;
				block();
				State = 86;
				Match(DEDENT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Character_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RenpyParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(RenpyParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(RenpyParser.STRING, i);
		}
		public Character_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_character_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterCharacter_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitCharacter_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCharacter_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Character_defContext character_def() {
		Character_defContext _localctx = new Character_defContext(Context, State);
		EnterRule(_localctx, 6, RULE_character_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(T__2);
			State = 91;
			Match(IDENT);
			State = 92;
			Match(T__3);
			State = 93;
			Match(T__4);
			State = 94;
			Match(T__5);
			State = 95;
			Match(STRING);
			State = 96;
			Match(T__6);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 97;
				Match(T__7);
				State = 98;
				Match(T__3);
				State = 99;
				Match(STRING);
				State = 100;
				Match(T__8);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Scene_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RenpyParser.IDENT, 0); }
		public Scene_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scene_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterScene_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitScene_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScene_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Scene_defContext scene_def() {
		Scene_defContext _localctx = new Scene_defContext(Context, State);
		EnterRule(_localctx, 8, RULE_scene_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(T__9);
			State = 104;
			Match(T__10);
			State = 105;
			Match(IDENT);
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11) {
				{
				State = 106;
				Match(T__11);
				State = 107;
				_la = TokenStream.LA(1);
				if ( !(_la==T__12 || _la==T__13) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pause_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(RenpyParser.NUMBER, 0); }
		public Pause_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pause_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterPause_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitPause_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPause_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pause_defContext pause_def() {
		Pause_defContext _localctx = new Pause_defContext(Context, State);
		EnterRule(_localctx, 10, RULE_pause_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(T__14);
			State = 111;
			Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Play_music_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(RenpyParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(RenpyParser.NUMBER, 0); }
		public Play_music_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_play_music_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterPlay_music_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitPlay_music_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlay_music_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Play_music_defContext play_music_def() {
		Play_music_defContext _localctx = new Play_music_defContext(Context, State);
		EnterRule(_localctx, 12, RULE_play_music_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(T__15);
			State = 114;
			Match(STRING);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__16) {
				{
				State = 115;
				Match(T__16);
				State = 116;
				Match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stop_music_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(RenpyParser.NUMBER, 0); }
		public Stop_music_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stop_music_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterStop_music_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitStop_music_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStop_music_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Stop_music_defContext stop_music_def() {
		Stop_music_defContext _localctx = new Stop_music_defContext(Context, State);
		EnterRule(_localctx, 14, RULE_stop_music_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(T__17);
			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18) {
				{
				State = 120;
				Match(T__18);
				State = 121;
				Match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Jump_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RenpyParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AgumentsContext aguments() {
			return GetRuleContext<AgumentsContext>(0);
		}
		public Jump_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_jump_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterJump_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitJump_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJump_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Jump_defContext jump_def() {
		Jump_defContext _localctx = new Jump_defContext(Context, State);
		EnterRule(_localctx, 16, RULE_jump_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(T__19);
			State = 125;
			Match(IDENT);
			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 126;
				aguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Call_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(RenpyParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AgumentsContext aguments() {
			return GetRuleContext<AgumentsContext>(0);
		}
		public Call_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_call_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.EnterCall_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRenpyListener typedListener = listener as IRenpyListener;
			if (typedListener != null) typedListener.ExitCall_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRenpyVisitor<TResult> typedVisitor = visitor as IRenpyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCall_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Call_defContext call_def() {
		Call_defContext _localctx = new Call_defContext(Context, State);
		EnterRule(_localctx, 18, RULE_call_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(T__20);
			State = 130;
			Match(IDENT);
			State = 132;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 131;
				aguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
